--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -18,7 +18,7 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
+debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
@@ -38,7 +38,7 @@ application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
 application/company_name=""
-application/product_name=""
+application/product_name="Designed To Climb"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
